--- a/src/components/Projects/ProjectCom.scss
+++ b/src/components/Projects/ProjectCom.scss
@@ -1,28 +1,179 @@
-:root
-{
-    --bg-light:#232323;
-    --bg-main:#131416;
-    --text-high:#d88135;
-    --text-low:rgba(255, 255, 255, 0.721);
-    --white:#fff;
-
+:root {
+  --bg-light: #232323;
+  --bg-main: #131416;
+  --text-high: #d88135;
+  --text-low: rgba(255, 255, 255, 0.721);
+  --white: #fff;
 }
 
 /*!----------------######## Portfolio section ends #######------------------- */
 
 .port_cls {
-    /* min-height: 100vh; */
-    background-color: #46595a; 
+  /* min-height: 100vh; */
+  background-color: #1c1d24;
+  color: var(--white);
+}
+
+/* ?------------------- filter button  -e -------------------- */
+
+
+.port_filter {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 20px;
+    text-align: center;
+    margin-bottom: 10px;
+    z-index: 1;
+}
+
+.port_filter button {
+    text-transform: uppercase;
+    margin: 5px;
+    transition: all 0.3s ease;
 }
 
 
+.port_filter .active {
+    background: #03e9f4;
+    border: solid #ffffff;
+
+    color: #050801;
+    box-shadow: 3px 6px #667e80,
+        0 0 25px #03e9f4,
+        0 0 50px #03e9f4,
+        0 0 200px #03e9f4;
+    animation: none;
+
+}
+
+.port_item.hide {
+    display: none;
+}
+
+.port_item.show {
+    animation: showItem .5s ease;
+}
+
+@keyframes showItem {
+    0% {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
 
 
+/* ?------------------- filter button -e -------------------- */
+
+.proj_item {
+  background-color: #131416;
+  .heading {
+    background-color: blue;
+    h1 {
+      color: var(--white);
+      font-size: 1.5rem;
+      font-weight: 900;
+    }
+    h3 {
+      color: var(--text-low);
+    }
+  }
+
+  .proj_img {
+    background-color: red;
+    margin-top: 10px;
+    width: 500px;
+    height: 220px;
+    // z-index: 12;
+    
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: fill;
+      position: relative;
+    }
+  }
+
+  .proj_btn {
+    display: flex;
+    justify-content: space-between;
+    // background-color: #18f108;
+    width: 500px;
+    margin-top: 10px;
+    gap: 10px;
+
+    button {
+      background-color: var(--text-high);
+      border: none;
+      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+      cursor: pointer !important;
+      display: inline-block;
+      font-size: 13px;
+      font-weight: 600;
+      overflow: hidden;
+      padding: 10px 15px;
+      position: relative;
+      text-decoration: none !important;
+      z-index: 1;
+      transition: all 0.25s ease;
+
+      a {
+        color: var(--white);
+      }
+    }
+
+    button:hover {
+      background-color: var(--bg-light);
+      color: var(--text-high);
+    }
+  }
+}
+
+.hide {
+  opacity: 0;
+}
 
 
+.heading input,
+.heading .toggle {
+    position: absolute;
+    
+    width: 35px;
+    height: 35px;
+    bottom: 3px;
+    right: 10px;
+    background-color: #055175;
+    z-index: 10;
 
+}
 
+.heading input {
+    opacity: 0;
+}
 
+.heading .toggle {
+    pointer-events: none;
+    border-radius: 50%;
+    background-color: #15b7fc;
+    transition: 0.5s;
+    text-align: center;
+
+    line-height: 35px;
+    font-size: 30px;
+    box-shadow: 0 0 0 0px rgb(3, 76, 102);
+}
+
+input:checked~.toggle {
+    box-shadow: 500px 0 0 500px rgba(22, 156, 228, 0.993);
+    transform: rotate(220deg);
+    line-height: 33px;
+
+}
 
 
 /*!----------------######## Portfolio section ends #######------------------- */
