--- a/src/components/Projects/ProjectCom.scss
+++ b/src/components/Projects/ProjectCom.scss
@@ -11,68 +11,71 @@
 .port_cls {
   /* min-height: 100vh; */
   background-color: #1c1d24;
+  background-color: #18f108;
   color: var(--white);
+}
+
+.container
+{
+  background-color: #cc7223;
+  // padding: 0px;
 }
 
 /* ?------------------- filter button  -e -------------------- */
 
-
 .port_filter {
-    flex: 0 0 100%;
-    max-width: 100%;
-    padding: 20px;
-    text-align: center;
-    margin-bottom: 10px;
-    z-index: 1;
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 10px;
+  z-index: 1;
 }
 
 .port_filter button {
-    text-transform: uppercase;
-    margin: 5px;
-    transition: all 0.3s ease;
+  text-transform: uppercase;
+  margin: 5px;
+  transition: all 0.3s ease;
 }
 
-
 .port_filter .active {
-    background: #03e9f4;
-    border: solid #ffffff;
+  background: #03e9f4;
+  border: solid #ffffff;
 
-    color: #050801;
-    box-shadow: 3px 6px #667e80,
-        0 0 25px #03e9f4,
-        0 0 50px #03e9f4,
-        0 0 200px #03e9f4;
-    animation: none;
-
+  color: #050801;
+  box-shadow: 3px 6px #667e80, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
+    0 0 200px #03e9f4;
+  animation: none;
 }
 
 .port_item.hide {
-    display: none;
+  display: none;
 }
 
 .port_item.show {
-    animation: showItem .5s ease;
+  animation: showItem 0.5s ease;
 }
 
 @keyframes showItem {
-    0% {
-        transform: scale(0.8);
-        opacity: 0;
-    }
+  0% {
+    transform: scale(0.8);
+    opacity: 0;
+  }
 
-    100% {
-        transform: scale(1);
-        opacity: 1;
-    }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
-
 
 /* ?------------------- filter button -e -------------------- */
 
 .proj_item {
   background-color: #131416;
+  background-color: blue;
   .heading {
-    background-color: blue;
+    // background-color: blue;
+    z-index: 4;
     h1 {
       color: var(--white);
       font-size: 1.5rem;
@@ -84,96 +87,98 @@
   }
 
   .proj_img {
-    background-color: red;
+    // background-color: red;
     margin-top: 10px;
     width: 500px;
     height: 220px;
     // z-index: 12;
-    
 
     img {
       width: 100%;
       height: 100%;
       object-fit: fill;
-      position: relative;
+      // position: relative;
     }
   }
 
-  .proj_btn {
-    display: flex;
-    justify-content: space-between;
-    // background-color: #18f108;
-    width: 500px;
+  .proj_btn_box {
+    display: inline-block;
+    // justify-content: space-between;
+    background-color: #18f108;
+    // width: 500px;
     margin-top: 10px;
-    gap: 10px;
+    
 
-    button {
-      background-color: var(--text-high);
-      border: none;
-      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
-      cursor: pointer !important;
-      display: inline-block;
-      font-size: 13px;
-      font-weight: 600;
-      overflow: hidden;
-      padding: 10px 15px;
-      position: relative;
-      text-decoration: none !important;
-      z-index: 1;
-      transition: all 0.25s ease;
-
-      a {
-        color: var(--white);
-      }
-    }
-
-    button:hover {
-      background-color: var(--bg-light);
-      color: var(--text-high);
+    .proj_btn {
+      padding: 5px 10px;
+      z-index: 4;
+      margin-right: 10px;
     }
   }
 }
 
-.hide {
+.proj_item input,
+.proj_item .toggle {
+  position: absolute;
+
+
+  outline: none;
+  background-color: var(--text-high);
+  z-index: 3;
+  cursor: pointer;
+
+  width: 26px;
+  height: 26px;
+  bottom: 10px;
+  right: 12px;
+}
+
+input {
   opacity: 0;
 }
 
+.proj_item .toggle {
+  pointer-events: none;
+  border-radius: 50%;
+  background-color: var(--text-high);
+  transition: 0.5s;
+  text-align: center;
 
-.heading input,
-.heading .toggle {
-    position: absolute;
-    
-    width: 35px;
-    height: 35px;
-    bottom: 3px;
-    right: 10px;
-    background-color: #055175;
-    z-index: 10;
-
+  line-height: 26px;
+  font-size: 30px;
+  box-shadow: 0 0 0 0px rgb(3, 76, 102);
 }
 
-.heading input {
-    opacity: 0;
+.proj_item input:checked ~ .toggle {
+  box-shadow: 0 0 0 500px #cc7223;
+  transform: rotate(220deg);
+  line-height: 26px;
 }
 
-.heading .toggle {
-    pointer-events: none;
-    border-radius: 50%;
-    background-color: #15b7fc;
-    transition: 0.5s;
-    text-align: center;
+.proj_desc {
+  position: absolute;
+  box-sizing: border-box;
+  margin-top: 50px;
+  padding: 10px;
+  opacity: 0;
+  // transition: all 1.0s ease;
+  z-index: 4;
+  pointer-events: none;
 
-    line-height: 35px;
-    font-size: 30px;
-    box-shadow: 0 0 0 0px rgb(3, 76, 102);
+  .tech {
+    margin-top: 20px;
+    color: black;
+    font-weight: 600;
+
+    span {
+      font-weight: 900;
+      color: var(--white);
+    }
+  }
 }
 
-input:checked~.toggle {
-    box-shadow: 500px 0 0 500px rgba(22, 156, 228, 0.993);
-    transform: rotate(220deg);
-    line-height: 33px;
-
+input:checked ~ .proj_desc {
+  opacity: 1;
+  transition-delay: 0.5s;
 }
-
-
 /*!----------------######## Portfolio section ends #######------------------- */
