--- a/src/components/Skills/SkillCom.scss
+++ b/src/components/Skills/SkillCom.scss
@@ -1,28 +1,22 @@
 /*!----------------######## sk1: Skill section starts #######------------------- */
-
-:root {
-  --bg-light: #232323;
-  --card-bg: #131416;
-  // --bg-main: #131416;
-  --skill-bg: #262835;
-  --text-high: #d88135;
-  --text-low: rgba(255, 255, 255, 0.721);
-  --white: #fff;
-}
+@import "../../variables";
+@import "../../index.scss";
 
 .skill_cls {
-  background-color: var(--skill-bg);
-  padding: 1px 80px;
+  background-color: $skill-bg;
+  padding: 10px 10px;
 }
+
 
 .heading {
   z-index: 2;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   transition: all 0.3s ease-in-out;
 
   .skill-type-icon {
-    color: var(--text-high);
+    color: $accent-color;
     font-size: 2.5rem;
     margin-right: 10px;
     align-items: center;
@@ -31,7 +25,7 @@
   }
 
   h3 {
-    color: var(--text-high);
+    color: $accent-color;
     float: right;
     font-size: 1.5rem;
     font-weight: 800;
@@ -41,7 +35,7 @@
 
   h3::after {
     display: block;
-    background: var(--white);
+    background: $white-1000;
     bottom: 0;
     content: "";
     height: 3px;
@@ -51,45 +45,32 @@
   }
 }
 
-
-
-.skill_card {
+.card {
   p {
     margin: 15px 0;
     transition: all 0.5s ease-in-out;
-
   }
 
   h4 {
     font-size: 15px;
     transition: all 0.5s ease-in-out;
-
-  }
-  .card .layer {
-    z-index:11;
-    position:absolute;
-    top:calc(100% - 2px);
-    height:100%;
-    width:100%;
-    left:0;
-    background:linear-gradient(to left , orange, tomato);
-    transition:0.5s;
-    
   }
 
   .skill-icons-box {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    background-color: var(--text-high);
+    display: flex;
+    flex-wrap: wrap;
+    background-color: $accent-color;
     border-radius: 5px;
-
     padding: 5px;
-    gap: 5px;
     transition: all 0.5s ease-in-out;
 
-
+    & > * {
+      margin: 5px;
+      flex: 1 1 20%;
+      border: 1px solid black;
+    }
     .skill-icon {
-      
+      padding: 2px;
       font-size: 27px;
       text-align: center;
       transition: all 0.5s ease-in-out;
@@ -99,51 +80,33 @@
       margin-top: -5px;
       font-size: 8px;
       font-weight: 600;
-      color: var(--text-low);
+      color: $text-low;
       transition: all 0.5s ease-in-out;
-
     }
   }
 }
 
-
-
-.card {
-  padding: 20px;
-  margin: 10px;
-}
-
 .card:hover {
-  color: var(--white);
+  color: $white-1000;
   // transform:scale(1.03);
 
-  .skill-icons-box
-  {
-    background-color: var(--white);
+  .skill-icons-box {
+    background-color: $white-1000;
   }
-  .skill-icon,h5
-  {
-    color: #d88135;
+  .skill-icon,
+  h5 {
+    color: $accent-color;
     transform: scale(1.1);
   }
   .skill-type-icon,
   h3 {
     transform: scale(1.1);
-    color: var(--white);
+    color: $white-1000;
   }
-  p,h4
-  {
+  p,
+  h4 {
     transform: scale(0.95);
   }
 }
 
 
-
-/* Responsive columns */
-@media screen and (max-width: 720px) {
-  .card {
-    padding: 20px;
-    flex: 100%;
-    max-width: 80%;
-  }
-}
