--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,11 +4,11 @@
 // Background Colors
 $bg-light: #232323;
 $bg-main: #131416;
-$home-bg:black;
+$home-bg:#000000;
 $abt-bg:black;
 $skill-bg: #262835;
 $proj-bg:rgb(35, 87, 87);
-$contact-bg:black;
+$contact-bg:#131416;
 
 
 
@@ -27,7 +27,8 @@ $box-shadow-high: 0 10px 10px rgba(111, 108, 108, 0.5);
 $white-1000: #fff;
 $white-700:rgba(255, 255, 255, 0.799);
 $black-1000: black;
-$black-900: rgba(48, 46, 46, 0.900);
+$black-900: rgba(47, 45, 45, 0.902);
+$black-800:rgb(28, 29, 36);
 $black-400: #656f87;
 $black-200: rgba(93, 72, 72, 0.166);
 $black-100: #f7f7f7;
