--- a/src/components/Projects/ProjectCom.scss
+++ b/src/components/Projects/ProjectCom.scss
@@ -1,83 +1,57 @@
-@import '../../variables';
+@import "../../variables";
 
 /*!----------------######## Portfolio section ends #######------------------- */
 
 .port_cls {
-  
   background-color: $proj-bg;
 }
 
-.card1
-{
-  background-color: blue;
-  // flex: 0 0 33.33%;
-  padding: 10px;
-  margin: 10px;
+.col-11 {
+  background-color: $bg-main;
+  flex: 0 0 auto;
+  width: 30.33333333%;
 
-  
-}
+  .proj-box-1 {
+    background: #131416;
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+    margin: 15px 0;
+    padding: 20px;
+    position: relative;
 
-.heading1
-{
-  h3
-  {
-    font-size: 1.5rem;
+    .port-img {
+      position: relative;
+
+      .proj-info {
+        padding-bottom: 20px;
+
+        h5 {
+          color: #1c1d24;
+          font-weight: 600;
+          margin: 0;
+          font-size: 1.25rem;
+         
+          a {
+            color: $white-1000;
+            font-size: 16px;
+          }
+        }
+        span {
+          color: $text-low;
+        }
+      }
+
+      img {
+        opacity: 0.8;
+        display: block;
+        // margin: auto;
+        // padding: 20px;
+        max-width: 100%;
+        border-style: none;
+        // vertical-align: middle;
+        // overflow: clip;
+      }
+    }
   }
-  h4
-  {
-    color: red;
-    // display: block;
-  }
 }
-
-.proj_imgBox
-{
-  background-color: red;
-  padding: 4px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  position: relative;
-  height: 250px;
-  width: 300px;
-
-  img
-  {
-    height: 100%;
-    width: 100%;
-    object-fit: fill;
-  
-  }
-
-}
-
-.btn_box
-{
-   background-color: green;
-  //  padding: 5px;
-   display: flex;
-   flex-wrap: wrap;
-   margin-top:5px;
-   justify-content: space-between;
-
-   button
-   {
-     flex-basis: 45%;
-     padding: 5px 15px;
-    //  margin: 5px;
-    //  row-gap: 5px;
-    //  column-gap: 5px;
-   }
-}
-
-
-
-
-
-
-
-
 
 /*!----------------######## Portfolio section ends #######------------------- */
