add-proj-filter

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,10 +7,10 @@ $bg-main: #131416;
 $home-bg:#000000;
 $abt-bg:black;
 $skill-bg: #262835;
-$proj-bg:rgb(35, 87, 87);
+$proj-bg:#1C1D24;
 $contact-bg:#131416;
 
-
+// #1C1D24
 
 //text Colors
 $accent-color:#d88135;
