--- a/src/components/Projects/ProjectCom.scss
+++ b/src/components/Projects/ProjectCom.scss
@@ -6,52 +6,112 @@
   background-color: $proj-bg;
 }
 
-.col-11 {
-  background-color: $bg-main;
-  flex: 0 0 auto;
-  width: 30.33333333%;
+/* ?------------------- filter button  -e -------------------- */
 
-  .proj-box-1 {
-    background: #131416;
-    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
-    margin: 15px 0;
-    padding: 20px;
-    position: relative;
+.port_filter {
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 10px;
+  z-index: 1;
 
-    .port-img {
-      position: relative;
+  button {
+    text-transform: uppercase;
+    padding: 3px 6px;
+    margin: 5px;
+    // transition: all 0.3s ease;
+  }
 
-      .proj-info {
-        padding-bottom: 20px;
+  .active {
+    background: #03e9f4;
+    border: solid #ffffff;
+  }
+}
 
-        h5 {
-          color: #1c1d24;
-          font-weight: 600;
-          margin: 0;
-          font-size: 1.25rem;
-         
-          a {
-            color: $white-1000;
-            font-size: 16px;
-          }
-        }
-        span {
-          color: $text-low;
-        }
-      }
+/* ?------------------- filter button -e -------------------- */
 
-      img {
-        opacity: 0.8;
-        display: block;
-        // margin: auto;
-        // padding: 20px;
-        max-width: 100%;
-        border-style: none;
-        // vertical-align: middle;
-        // overflow: clip;
+/*? -------------------------------- */
+.imgBox {
+  position: relative;
+  .proj-title {
+    margin-bottom: 10px;
+    z-index: 11;
+
+    h4 {
+      display: inline;
+      font-size: 16px;
+    }
+    h6 {
+      display: block;
+      font-size: 14px;
+    }
+    span {
+      z-index: 11;
+      float: right;
+      // display: inline;
+
+      button
+      {
+        padding: 1px 5px;
       }
     }
   }
+
+  img {
+    display: block;
+    width: 100%;
+    height: 230px;
+    margin-bottom: 10px;
+    z-index: 1;
+  }
+
+  .btn-box {
+    z-index: 11;
+    display: flex;
+    justify-content: space-between;
+
+    button {
+      padding: 5px 10px;
+    }
+  }
 }
+
+
+.details {
+
+
+  display: block;
+  position: absolute;
+  padding: 10px;
+  background: linear-gradient(to left, rgb(255, 166, 0), rgb(255, 99, 71));
+  margin-top: 10px;
+  top: calc(100% - 13px);
+
+  // top: 95%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  // transition: all .8s ease-in-out;
+  transition: all 0.6s ease-in-out;
+
+
+  p {
+    /* Styles for the text within the details section */
+    // margin: 50px;
+    color: $white-1000;
+    font-weight: 600;
+    // transition: all 11s ease-in-out;
+
+  }
+
+  &.show {
+    top: 16%;
+  }
+}
+
+/* ?--------------------------------------- */
+
+/*? ------------ Port. animations -s --------------- */
 
 /*!----------------######## Portfolio section ends #######------------------- */
