--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -16,6 +16,7 @@ $contact-bg:#131416;
 $accent-color:#d88135;
 $text-low: rgba(255, 255, 255, 0.721);
 $main1: #404bc7;
+$grad-main:linear-gradient(to left, orange, tomato);
 
 //Shadows
 $box-shadow-low: 0 5px 15px rgba(0, 0, 0, 0.2);
