--- a/src/components/Home/HomeCom.scss
+++ b/src/components/Home/HomeCom.scss
@@ -1,20 +1,34 @@
 @import "../../variables";
 
 .home_cls {
-    // background-color: rgb(164, 48, 48);
-    // background-image: url("imgs/bg3-bw.jpg");
+    // max-height: 100vh;
+    // background-image: url("../../assets/Background-imgs/bg3-bw.jpg");
 
     .container {
-        padding: 10px;
+        background-color: green;
+        // padding: 10px;
 
         .row {
-            min-height: 100vh;
-            padding-bottom: 90px;
+            background-color: red;
+            // height: 10vh;
+            // padding-top: 25vh;
+            // padding-bottom: 90px;
         }
     }
 }
 
 .home-banner {
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+    background-image: url("../../assets/Background-imgs/bg3.jpg");
+
+    width: 100%;
+    height: 100vh;
+
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -24,47 +38,60 @@
 
 .overlay:before {
     background-color: rgba(0, 0, 0, 0.3);
-    // opacity: 0.1;
     content: "";
     height: 100%;
     left: 0;
     position: absolute;
     top: 0;
     width: 100%;
-    // z-index: 3;
 }
 .overlay > div {
     position: relative;
     z-index: 5;
 }
-.col-lg-12 {
-    background-color: rgb(145, 76, 76);
-    opacity: 1;
-    .hb-typo {
-        line-height: 5rem;
 
-        h6 {
-            font-size: 1.2rem;
-        }
-        h1 {
-            font-size: 4rem;
-            font-weight: 900;
-            // margin-bottom: 15px;
+.hb-typo {
+    
+    background-color: green;
+    // line-height: 5rem;
+   
 
-            // span
-            // {
-            //     color: $accent-color;
-            //     font-weight: 100;
-            // }
-        }
-        h3 {
-            font-size: 2.3rem;
-            font-weight: 500;
-            .prof {
-            }
+    h6 {
+        font-size: 1.2rem;
+    }
+    h1 {
+        font-size: 4rem;
+        font-weight: 900;
+        // margin-bottom: 15px;
+
+        // span
+        // {
+        //     color: $accent-color;
+        //     font-weight: 100;
+        // }
+    }
+    h3 {
+        font-size: 2.3rem;
+        font-weight: 500;
+        .prof {
         }
     }
 }
+
+.quote_box {
+
+    position: absolute;
+    bottom: 18px;
+    right: 16px;
+
+    p {
+        font-size: 0.9rem;
+        font-weight: 400;
+    }
+}
+
+
+
 
 @media (min-width: 992px) {
     .col-lg-12 {
@@ -76,5 +103,3 @@
         // font-size: 60px;
     }
 }
-
-
